feat: Add setting for number of paragraphs
* Added an input that lets users set number of paragraphs to generate.
* Modified the design of the loading bar in detail.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
   </head>
   <body>
     <h1>Scroll Tester</h1>
+    <div>
+      How many paragraphs do you want?
+      <input type="text" id="paragraphsNum" />
+      <button id="runBtn">Run</button>
+    </div>
     <div class="loading-wrapper">
       <div class="loading-bar" id="loadingBar"></div>
       <div id="loadingInfo"></div>
