--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Scroll Tester</title>
+    <link rel="shortcut icon" href="icon.svg" type="image/x-icon" />
     <link rel="stylesheet" href="common.css" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-GM69QX6Y3Y"></script>
