chore: Add logo to header

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!-- 
     TODO:
+    Add logo
     FIXME: 
     * Need to fix event handler overlapping phenomenon when click run button several times
 -->
@@ -25,7 +26,10 @@
     </script>
   </head>
   <body>
-    <h1>Scroll Tester</h1>
+    <div class="header">
+      <img class="logo-icon" src="icon.svg" alt="icon" />
+      <h1>Scroll Tester</h1>
+    </div>
     <div>
       How many paragraphs do you want?
       <input type="text" id="paragraphsNum" />
