chore: 링크 주소 수정

--- a/index.html
+++ b/index.html
@@ -80,12 +80,19 @@
       </div>
       <div class="navbar-navs" id="navbarNavs">
         <ul class="navbar-links">
-          <li class="navbar-link-item"><a href="#">PROJECTS</a></li>
-          <li class="navbar-link-item"><a href="#">BLOG</a></li>
+          <li class="navbar-link-item">
+            <a href="https://www.radia.me/">PROJECTS</a>
+          </li>
+          <li class="navbar-link-item">
+            <a href="https://blog.radia.me/">BLOG</a>
+          </li>
         </ul>
         <ul class="navbar-socials">
           <li class="navbar-social-item">
-            <a href="#" target="_blank">
+            <a
+              href="https://github.com/radiantbeing99/scroll-tester"
+              target="_blank"
+            >
               <img src="./img/icon/icon_github_01_dark.svg" alt="github" />
             </a>
           </li>
